--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -29,3 +29,26 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div.caption {
+  text-align: center;
+}
+
+div.caption span.caption-figure-nbr {
+  font-weight: 800;
+}
+
+.footnote {
+  font-size: 0.8em;
+}
+
+.linkPoint {
+  display: block;
+  clear: both;
+}
