--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -5,3 +5,27 @@
   font-weight: 700;
   font-style: normal;
 }
+
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div.caption {
+  text-align: center;
+}
+
+div.caption span.caption-figure-nbr {
+  font-weight: 800;
+}
+
+.footnote {
+  font-size: 0.8em;
+}
+
+.linkPoint {
+  display: block;
+  clear: both;
+}
