--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -13,6 +13,33 @@ img {
   margin-right: auto;
 }
 
+html[data-theme="light"] .main-frame h2 {
+  /* color: var(--sl-color-accent);*/
+  /*font-family: antique-olive;*/
+  color: royalblue;
+  border: 3px solid royalblue;
+  border-radius: 8px;
+  --webkit-border-radius: 8px;
+  background-color: white;
+  font-weight: 800;
+  display: table;
+  padding-top: 0px;
+  padding-bottom: 2px;
+  padding-left: 6px;
+  padding-right: 6px;
+}
+html[data-theme="dark"] .main-frame h2 {
+  /* color: var(--sl-color-accent); */
+  color: #375ac1;
+}
+
+html[data-theme="light"] h3 {
+  color: #2177c3;
+}
+html[data-theme="dark"] h3 {
+  color: #2177c3;
+}
+
 div.caption {
   text-align: center;
 }
