--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -16,17 +16,18 @@ img {
 html[data-theme="light"] .main-frame h2 {
   /* color: var(--sl-color-accent);*/
   /*font-family: antique-olive;*/
-  color: royalblue;
-  border: 3px solid royalblue;
+  color: white;
+  border: 0px solid royalblue;
   border-radius: 8px;
   --webkit-border-radius: 8px;
-  background-color: white;
+  background-color: royalblue;
   font-weight: 800;
   display: table;
-  padding-top: 0px;
-  padding-bottom: 2px;
-  padding-left: 6px;
-  padding-right: 6px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  line-height: 1em;
 }
 html[data-theme="dark"] .main-frame h2 {
   /* color: var(--sl-color-accent); */
@@ -38,6 +39,13 @@ html[data-theme="light"] h3 {
 }
 html[data-theme="dark"] h3 {
   color: #2177c3;
+}
+
+html[data-theme="light"] h4 {
+  color: #0d8397;
+}
+html[data-theme="dark"] h4 {
+  color: #0d8397;
 }
 
 div.caption {
@@ -56,3 +64,4 @@ div.caption span.caption-figure-nbr {
   display: block;
   clear: both;
 }
+
