--- a/src/components/react/swiperstyles.css
+++ b/src/components/react/swiperstyles.css
@@ -1,12 +1,12 @@
 .swiper {
   width: 100%;
   height: 100%;
-  height: 500px;
+  /* height: 500px; */
 }
 
 .swiper-slide {
   text-align: center;
-  font-size: 18px;
+  /* font-size: 18px; */
   /* background: #fff; */
 
   /* Center slide text vertically */
@@ -20,4 +20,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+aside {
+  text-align: left;
 }
