--- a/src/components/react/swiperstyles.css
+++ b/src/components/react/swiperstyles.css
@@ -2,6 +2,23 @@
   width: 100%;
   height: 100%;
   /* height: 500px; */
+
+  .swiper-button-next,
+  .swiper-button-prev {
+    background-color: rgba(61, 61, 61, 0.25);
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+  }
+
+  .swiper-pagination {
+    margin-top: 0;
+  }
+
+  .starlight-aside {
+    text-align: left;
+    margin-top: 0;
+  }
 }
 
 .swiper-slide {
@@ -20,8 +37,4 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-aside {
-  text-align: left;
 }
