--- a/src/components/react/swiperstyles.css
+++ b/src/components/react/swiperstyles.css
@@ -1,4 +1,7 @@
 .swiper {
+  background-color: white;
+  border-radius: 8px;
+
   width: 100%;
   height: 100%;
   /* height: 500px; */
@@ -12,7 +15,10 @@
   }
 
   .swiper-pagination {
-    margin-top: 0;
+    .swiper-pagination-bullet {
+      width: 16px;
+      height: 16px;
+    }
   }
 
   .starlight-aside {
