--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -304,6 +304,251 @@ html[data-theme="dark"] aside[aria-label="C#"] .starlight-aside__title {
 /* --- END:   C# Box ------*/
 
 
+
+
+
+
+
+
+
+
+/* --- START: How does this work? Box ------*/
+
+aside[aria-label="How does this work?"] p.starlight-aside__title {
+  font-size:1.3rem;
+  font-family: "Gaegu";
+  font-weight: 800;
+  font-size: 1.7rem;
+  color: black;
+}
+
+aside[aria-label="How does this work?"] ol.counterStart2 { 
+  counter-reset: step-counter 1; 
+}
+aside[aria-label="How does this work?"] ol.counterStart3 { 
+  counter-reset: step-counter 2; 
+}  
+aside[aria-label="How does this work?"] ol.counterStart4 { 
+  counter-reset: step-counter 3; 
+}  
+aside[aria-label="How does this work?"] ol.counterStart5 { 
+  counter-reset: step-counter 4; 
+}  
+aside[aria-label="How does this work?"] ol.counterStart6 { 
+  counter-reset: step-counter 5; 
+}
+aside[aria-label="How does this work?"] ol.counterStart7 { 
+  counter-reset: step-counter 6; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart8 { 
+  counter-reset: step-counter 7; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart9 { 
+  counter-reset: step-counter 8; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart10 { 
+  counter-reset: step-counter 9; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart11 { 
+  counter-reset: step-counter 10; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart12 { 
+  counter-reset: step-counter 11; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart13 { 
+  counter-reset: step-counter 12; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart14 { 
+  counter-reset: step-counter 13; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart15 { 
+  counter-reset: step-counter 14; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart16 { 
+  counter-reset: step-counter 15; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart17 { 
+  counter-reset: step-counter 16; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart18 { 
+  counter-reset: step-counter 17; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart19 { 
+  counter-reset: step-counter 18; 
+}      
+aside[aria-label="How does this work?"] ol.counterStart20 { 
+  counter-reset: step-counter 19; 
+}
+aside[aria-label="How does this work?"] ol.counterStart21 { 
+  counter-reset: step-counter 20; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart22 { 
+  counter-reset: step-counter 21; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart23 { 
+  counter-reset: step-counter 22; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart24 { 
+  counter-reset: step-counter 23; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart25 { 
+  counter-reset: step-counter 24; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart26 { 
+  counter-reset: step-counter 25; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart27 { 
+  counter-reset: step-counter 26; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart28 { 
+  counter-reset: step-counter 27; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart29 { 
+  counter-reset: step-counter 28; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart30 { 
+  counter-reset: step-counter 29; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart31 { 
+  counter-reset: step-counter 30; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart32 { 
+  counter-reset: step-counter 31; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart33 { 
+  counter-reset: step-counter 32; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart34 { 
+  counter-reset: step-counter 33; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart35 { 
+  counter-reset: step-counter 34; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart36 { 
+  counter-reset: step-counter 35; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart37 { 
+  counter-reset: step-counter 36; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart38 { 
+  counter-reset: step-counter 37; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart39 { 
+  counter-reset: step-counter 38; 
+}   
+aside[aria-label="How does this work?"] ol.counterStart40 { 
+  counter-reset: step-counter 39; 
+}
+aside[aria-label="How does this work?"] ol.counterStart41 { 
+  counter-reset: step-counter 40; 
+}
+aside[aria-label="How does this work?"] ol.counterStart42 { 
+  counter-reset: step-counter 41; 
+}
+aside[aria-label="How does this work?"] ol.counterStart43 { 
+  counter-reset: step-counter 42; 
+}
+aside[aria-label="How does this work?"] ol.counterStart44 { 
+  counter-reset: step-counter 43; 
+}
+aside[aria-label="How does this work?"] ol.counterStart45 { 
+  counter-reset: step-counter 44; 
+}
+aside[aria-label="How does this work?"] ol.counterStart46 { 
+  counter-reset: step-counter 45; 
+}
+aside[aria-label="How does this work?"] ol.counterStart47 { 
+  counter-reset: step-counter 46; 
+}
+aside[aria-label="How does this work?"] ol.counterStart48 { 
+  counter-reset: step-counter 47; 
+}
+aside[aria-label="How does this work?"] ol.counterStart49 { 
+  counter-reset: step-counter 48; 
+}
+aside[aria-label="How does this work?"] ol.counterStart50 { 
+  counter-reset: step-counter 49; 
+}       
+
+aside[aria-label="How does this work?"] ol > li {
+  counter-increment: step-counter;
+  margin-bottom: 10px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+
+  font-size:1.3rem;
+  font-family: "Gaegu";
+  line-height: 1.3rem;
+
+  margin-right: 10px;
+
+}
+ 
+aside[aria-label="How does this work?"] ol > li::before {
+  content: counter(step-counter);
+  /* Negative left margin makes the number appear outside of the list.
+     It's like setting list-style-position: outside */
+  margin-right: 5px;
+  margin-left: -36px;
+  font-weight: bold;
+  border: 2px solid black;
+  border-radius: 3px;
+  line-height: 1.7em;
+  background-color: #ffd966;
+  padding-left:0.5rem;
+  padding-right:0.5rem;
+  padding-top:0.1rem;
+  padding-bottom:0.1rem;
+  font-size:1.3rem;
+  font-family: "Gaegu";
+
+  border-top-left-radius: 255px 15px;
+  border-top-right-radius: 15px 225px;
+  border-bottom-right-radius: 225px 15px;
+  border-bottom-left-radius:15px 255px;
+
+}
+
+aside[aria-label="How does this work?"] {
+  border-inline-start: inherit;
+  border-radius: 8px;
+  border: 2px solid black;
+  
+  /* Hand drawn border box, from: https://stackoverflow.com/questions/43694588/can-i-use-css-to-distort-borders-so-they-look-like-sketched */
+  background:transparent;
+  padding:0.5rem 0.5rem;
+  margin:0 0.5rem;
+  font-size:1rem;
+
+  border-top-left-radius: 7px 45px;
+  border-top-right-radius: 15px 225px;
+  border-bottom-right-radius: 225px 15px;
+  border-bottom-left-radius:7px 255px;
+}
+
+html[data-theme="light"] aside[aria-label="How does this work?"] {
+  background-color: whitesmoke;
+}
+
+html[data-theme="dark"] aside[aria-label="SynHow does this work?tax"] {
+  background-color: #3d414d;
+}
+
+aside[aria-label="How does this work?"] img {
+  background-color: white;
+  border-radius: 8px;
+}
+
+
+
+
+
+
+
+/* --- END:   How does this work? Box ------*/
+
+
 .linkPoint {
   display: block;
   clear: both;
@@ -318,6 +563,10 @@ html[data-theme="dark"] aside[aria-label="C#"] .starlight-aside__title {
   margin-right: 5px;
 }
 
+.boldunderline {
+  font-weight: 800;
+  text-decoration: underline;
+}
 
 /* ------------------------------------------- */
 /* END:   CUSTOM STYLES                        */
