Added import to custom.css

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,5 +1,6 @@
 @import url("https://use.typekit.net/vzr3ole.css");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+@import url('https://fonts.googleapis.com/css?family=Gaegu&display=swap');;
 
 #_top,.site-title {
   font-family: "antique-olive", sans-serif;
