Copied over Statistics Calculator to 'working with multiples - putting it together'. Latex formulas are a TODO.

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -650,10 +650,9 @@ aside[aria-label="How does this work?"] ul > li ul li ul li::before {
   color: darkviolet;
 }
 
-img[src*="#fiftyPctWidth"] {
-  width: 1280;
-  height: 750;
-  aspect-ratio: auto 1280 / 750;
+.mathSymbol {
+  color: firebrick;
+  font-weight: 800;
 }
 
 /* ------------------------------------------- */
