--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -90,7 +90,8 @@ html[data-theme="dark"] h4 {
   padding-bottom: 5px;
   padding-left: 6px;
   padding-right: 6px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  vertical-align: top;
 }
 
 .main-pane details summary[role='button'] {
